--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,18 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
+    <!-- *************讯飞语音 相关权限**************-->  
+    <!--获取手机录音机使用权限，听写、识别、语义理解需要用到此权限 -->  
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>  
+    <!--读取网络信息状态 -->  
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>  
+    <!--获取当前wifi状态 -->  
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>  
+    <!--允许程序改变网络连接状态 -->  
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>  
+    <!--读取手机信息权限 -->  
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>  
+
     <application
         android:name=".app.MyApplication"
         android:allowBackup="true"
@@ -43,7 +55,12 @@
             android:enabled="true"
             android:process=":remote" />
 
-        <activity android:name=".ui.activity.AddCityActivity"/>
+        <activity android:name=".ui.activity.AddCityActivity" />
+
+        <service
+            android:name=".service.AutoUpdateService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
