--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,18 +17,28 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <!-- *************讯飞语音 相关权限**************-->  
-    <!--获取手机录音机使用权限，听写、识别、语义理解需要用到此权限 -->  
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>  
-    <!--读取网络信息状态 -->  
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>  
-    <!--获取当前wifi状态 -->  
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>  
-    <!--允许程序改变网络连接状态 -->  
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>  
-    <!--读取手机信息权限 -->  
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>  
-
+    <!--  *************讯飞语音 相关权限************** -->
+      
+    <!-- 获取手机录音机使用权限，听写、识别、语义理解需要用到此权限  -->
+      
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+      
+    <!-- 读取网络信息状态  -->
+      
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+      
+    <!-- 获取当前wifi状态  -->
+      
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+      
+    <!-- 允许程序改变网络连接状态  -->
+      
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+      
+    <!-- 读取手机信息权限  -->
+      
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+      
     <application
         android:name=".app.MyApplication"
         android:allowBackup="true"
@@ -60,7 +70,9 @@
         <service
             android:name=".service.AutoUpdateService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <activity android:name=".ui.activity.ForecastDayActivity"></activity>
     </application>
 
 </manifest>
